Test Coverage report creation and integration with sonar

--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,8 @@
         ],
         "post-update-cmd": [
             "@symfony-scripts"
-        ]
+        ],
+        "test": "./vendor/bin/phpunit"
     },
     "config": {
         "sort-packages": true
